# lpac

./: .clang-format  .clang-format-ignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_en.md  REUSE.toml  driver.private.h
.github/scripts/: build-ci.sh  functions.sh  setup-debian.sh  setup-qmi.sh
.github/workflows/: build.yaml  build_docker.yaml  clang-format-check.yaml  lint.yaml  reuse-lint.yaml
LICENSES/: LicenseRef-ESTKME-Commercial.txt  MIT.txt
asn1/: generate.txt  rsp.asn
cjson/: CMakeLists.txt  cJSON_ex.c  cJSON_ex.h
cjson-ext/: CMakeLists.txt
cjson-ext/cjson-ext/: cJSON_ex.c  cJSON_ex.h
cmake/: FindPCSCLite.cmake  aarch64-linux-musl.cmake  aarch64-windows-zig.cmake  git-version.cmake  linux-mingw32.cmake  linux-mingw64-woa.cmake  linux-mingw64.cmake
dlfcn-win32/: CMakeLists.txt  LICENSE  dlfcn.c
docs/: DEVELOPERS.md  ENVVARS.md  FAQ.md  LINUX-DIST.md  USAGE.md
docs/asn1/: PKIXExplicit88.asn  PKIXImplicit88.asn  rsp.asn
docs/backends/: at.md  curl.md  gbinder.md  mbim.md  pcsc.md  qmi.md  stdio-schema.json  stdio.md  types.md  winhttp.md
documents/: DEVELOPERS.md  USAGE.md
driver/: CMakeLists.txt  constants.h  debug.c  debug.h  driver.c  driver.h  driver.private.h  euicc-driver-loader.c  euicc-driver-loader.h  helpers.c  helpers.h  libeuicc-driver-loader.pc.in  libeuicc-drivers.pc.in  print.h
driver/apdu/: argos.c  at.c  at.h  at_cmd.h  at_cmd_unix.c  at_cmd_win32.c  at_common.c  at_common.h  at_csim.c  at_etsi.c  at_etsi_csim.c  at_helpers.c  at_helpers.h  at_unix.c  at_win32.c  at_win32.h  gbinder_hidl.c  gbinder_hidl.h  mbim.c  mbim.h  mbim_helpers.c  mbim_helpers.h  pcsc.c  pcsc.h  pcsc_win32.c  pcsc_win32.h  qmi.c  qmi.h  qmi_common.c  qmi_common.h  qmi_helpers.c  qmi_helpers.h  qmi_qrtr.c  qmi_qrtr.h  qmi_qrtr_helpers.c  qmi_qrtr_helpers.h  stdio.c  stdio.h  uqmi.c  uqmi.h
driver/http/: curl.c  curl.h  stdio.c  stdio.h  winhttp.c  winhttp.h
driver/stdio/: apdu.c  helpers.c  helpers.h  http.c  stdio-apdu.c  stdio-helpers.c  stdio-helpers.h  stdio-http.c  stdio.h  stdio_apdu.c  stdio_helpers.c  stdio_helpers.h  stdio_http.c
euicc/: .hexutil.c.swp  CMakeLists.txt  base64.c  base64.h  constants.h  debug.c  debug.h  derutil.c  derutil.h  derutils.c  derutils.h  es10a.c  es10a.h  es10b.c  es10b.h  es10b_ex.c  es10b_ex.h  es10c.c  es10c.h  es10c_ex.c  es10c_ex.h  es10cex.c  es10cex.h  es10x.c  es10x.h  es10x.private.h  es8p.c  es8p.h  es9p.c  es9p.h  es9p_errors.c  es9p_errors.h  es9p_ex.c  es9p_ex.h  euicc.c  euicc.h  euicc.private.h  euicc_export.h  hexutil.c  hexutil.h  (+11 more)
euicc/asn1c/: CMakeLists.txt  config.h
euicc/asn1c/asn1/: ANY.c  ANY.h  AccessDescription.c  AccessDescription.h  AdministrationDomainName.c  AdministrationDomainName.h  AlgorithmIdentifier.c  AlgorithmIdentifier.h  AnotherName.c  AnotherName.h  Attribute.c  Attribute.h  AttributeType.c  AttributeType.h  AttributeTypeAndValue.c  AttributeTypeAndValue.h  AttributeValue.c  AttributeValue.h  AuthenticateClientOk.c  AuthenticateClientOk.h  AuthenticateClientOkEs11.c  AuthenticateClientOkEs11.h  AuthenticateClientRequest.c  AuthenticateClientRequest.h  AuthenticateClientResponseEs11.c  AuthenticateClientResponseEs11.h  AuthenticateClientResponseEs9.c  AuthenticateClientResponseEs9.h  AuthenticateErrorCode.c  AuthenticateErrorCode.h  AuthenticateResponseError.c  AuthenticateResponseError.h  AuthenticateResponseOk.c  AuthenticateResponseOk.h  AuthenticateServerRequest.c  AuthenticateServerRequest.h  AuthenticateServerResponse.c  AuthenticateServerResponse.h  AuthorityInfoAccessSyntax.c  AuthorityInfoAccessSyntax.h  (+549 more)
euicc/asn1c/mingw32/: CMakeLists.txt  envstub.c  envstub.h  random.c  random.h
framework/: CMakeLists.txt  LICENSE
interface/: CMakeLists.txt  LICENSE
interface/apdu/: CMakeLists.txt  at.c  gbinder_hidl.c  pcsc.c  stdio.c
interface/es9p/: CMakeLists.txt  curl.c  stdio.c
interface/http/: CMakeLists.txt  curl.c  stdio.c
scripts/: build-ci.sh  build-woa.sh  build.sh  functions.sh  setup-debian.sh  setup-linux.sh  setup-mingw-woarm64.sh  setup-qmi.sh
src/: CMakeLists.txt  applet.c  applet.h  dlsym_interface.c  dlsym_interface.h  driver.c  driver.h  jprint.c  jprint.h  logger.c  logger.h  lpac.manifest  lpac.rc  main.c  main.h  rlpa-server.php  utils.c  utils.h  version.h.in
src/applet/: CMakeLists.txt  chip.c  chip.h  driver.c  driver.h  drivre.h  entry.c  entry.h  notification.c  notification.h  profile.c  profile.h  version.c  version.h
src/applet/chip/: applet.c  applet.h  defaultsmdp.c  defaultsmdp.h  info.c  info.h  purge.c  purge.h
src/applet/notification/: applet.c  applet.h  dump.c  dump.h  helpers.c  helpers.h  list.c  list.h  notification_common.c  process.c  process.h  remove.c  remove.h  replay.c  replay.h
src/applet/profile/: applet.c  applet.h  delete.c  delete.h  disable.c  disable.h  discovery.c  discovery.h  download.c  download.h  enable.c  enable.h  list.c  list.h  nickname.c  nickname.h  operation.c
src/driver/apdu/: CMakeLists.txt  at.c  at.h  gbinder_hidl.c  pcsc.h  stdio.c  stdio.h
src/driver/http/: CMakeLists.txt  curl.c  curl.h  stdio.c
src/mingw32/: CMakeLists.txt
src/mingw32/dlfcn-win32/: CMakeLists.txt
utils/: CMakeLists.txt
utils/lpac/: list.h  utils.c  utils.h
